--- a/app/src/main/res/layout/fragment_add_product.xml
+++ b/app/src/main/res/layout/fragment_add_product.xml
@@ -134,9 +134,9 @@
                 android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="40dp"
                 android:text="@string/button_add"
-                app:layout_constraintTop_toBottomOf="@id/textInput_desc"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/textInput_desc" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
